crates/ty_python_semantic/resources/mdtest/snapshots/union_call.md_-_Calling_a_union_of_f…_-_Union_with_overloade…_(4408ade1316b97c0).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: union_call.md - Calling a union of function types - Union with overloaded method and incompatible variant
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/union_call.md
---

# Python source files

## mdtest_snippet.py

```
1 | def _(x: bytes | str | int):
2 |     # error: [invalid-argument-type]
3 |     # error: [unresolved-attribute]
4 |     x.split(" ")
```

# Diagnostics

```
error[unresolved-attribute]: Attribute `split` is not defined on `int` in union `bytes | str | int`
 --> src/mdtest_snippet.py:4:5
  |
4 |     x.split(" ")
  |     ^^^^^^^

```

```
error[invalid-argument-type]: Argument to bound method `bytes.split` is incorrect
 --> src/mdtest_snippet.py:4:13
  |
4 |     x.split(" ")
  |             ^^^ Expected `Buffer | None`, found `Literal[" "]`
  |
info: type `Literal[" "]` is not assignable to any element of the union `Buffer | None`
info: ├── type `Literal[" "]` is not assignable to protocol `Buffer`
info: │   └── protocol member `__buffer__` is not defined on type `Literal[" "]`
info: └── ... omitted 1 union element without additional context
info: Method defined here
    --> stdlib/builtins.pyi:1843:9
     |
1843 |     def split(self, sep: ReadableBuffer | None = None, maxsplit: SupportsIndex = -1) -> list[bytes]:
     |         ^^^^^       --------------------------------- Parameter declared here
     |
info: Union variant `bound method bytes.split(sep: Buffer | None = None, maxsplit: SupportsIndex = -1) -> list[bytes]` is incompatible with this call site
info: Attempted to call union type `(bound method bytes.split(sep: Buffer | None = None, maxsplit: SupportsIndex = -1) -> list[bytes]) | (bound method str.split(sep: str | None = None, maxsplit: SupportsIndex = -1) -> list[str])`

```
