crates/ty_python_semantic/resources/mdtest/snapshots/unpacking.md_-_Unpacking_-_Exactly_too_few_valu…_(f920ea85eefe9cfe).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: unpacking.md - Unpacking - Exactly too few values to unpack
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unpacking.md
---

# Python source files

## mdtest_snippet.py

```
1 | a, b = (1,)  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Not enough values to unpack
 --> src/mdtest_snippet.py:1:1
  |
1 | a, b = (1,)  # error: [invalid-assignment]
  | ^^^^   ---- Got 1
  | |
  | Expected 2
  |

```
